feat(sample_Project_pages:created)

--- a/mywork.html
+++ b/mywork.html
@@ -12,7 +12,7 @@
     <h1 class="w-full text-center font-extrabold py-4"> Sample Projects </h1>
 </header>
 
-<main class="container mx-auto my-8 p-8 bg-white shadow-lg">
+<main class="container mx-auto my-8 p-8 bg-sky-200 shadow-lg">
 
     <nav class="mb-8 font-bold flex flex-row gap-10 border-b-8 bg-sky-200 ">
         <a href="about.html" class="A1">About</a>
